--- a/Angularjs/Demo/package.json
+++ b/Angularjs/Demo/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
     "bootstrap": "^5.3.2",
+    "ngx-captcha": "^13.0.0",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
